=== 0.4 ===
2011-04-28  Aki Sasaki  <aki@mozilla.com>

* scripts/configtest.py:
    Ignore test_malformed* config files.

* configs/test/test_malformed.json: Added file.

* configs/test/test_malformed.py: Added file.

* mozharness/base/config.py (parse_config_file):
    Fixed python config files.
    Raise assertion if config file does not end in .json or .py.
    Raise assertion if config file is not found.

* test/test_base_config.py:
    TestJsonConfig -> TestParseConfigFile.
    Added python config file tests, illegal/malformed config file checking.

* configs/test/test.py: Added file.

* mozharness/l10n/locales.py (LocalesMixin.query_locales):
    Fixed some borked logic.

* mozharness/l10n/locales.py (LocalesMixin.parse_locales_file):
    Removed duplicate ignore_locales logic that should be handled in query_locales.

* test/helper_files/locales.json: Added file.

* test/helper_files/locales.txt: Added file.

* test/test_l10n_locales.py: Added file.

* test/*: Renamed to match directory structure.

2011-04-27  Aki Sasaki  <aki@mozilla.com>

* test/networked/test_script.py: Added file.

* test/test_script.py (TestHelperFunctions.test_download_file): Removed method.

* unit.sh:
    Added a separate networked/non-networked call to nosetests.  In the future, we should add an option to skip the network tests.

* mozharness/base/vcs/hgtool.py: Created softlink -> sourcetool.py.

* mozharness/base/vcs/sourcetool.py:
    Was able to test a successful |sourcetool.py repo|, as well as a |sourcetool.py -s shared_dir repo|.
    Created ability to change the default VCS by looking at the filename (softlink to hgtool.py and it'll use hg by default; softlink to gittool.py and it'll use git when we enable it. I also see potential svntool.py and cvstool.py at some point.)

* mozharness/base/vcs/sourcetool.py (SourceTool._pre_config_lock):
    Verified that self.config['vcs'] is set; else self.fatal()

* mozharness/base/vcs/sourcetool.py (SourceTool.source):